# OvGME

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  CMakePresets.json  OvGME 3rd 1.8.1.2.7z  OvGME.depend  README.md  README.txt  main.cpp  resource.h  resource.rc
include/: gme.h  gme_conf.h  gme_game.h  gme_netw.h  gme_tools.h
src/: gme.cpp  gme_conf.cpp  gme_dlg_about.cpp  gme_dlg_main.cpp  gme_dlg_mods.cpp  gme_dlg_repo.cpp  gme_dlg_snap.cpp  gme_game.cpp  gme_mods.cpp  gme_netw.cpp  gme_prof.cpp  gme_repo.cpp  gme_snap.cpp  gme_tools.cpp
